--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
     <!-- Favicons -->
     <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
     <!-- Custom styles for this template -->
-    <link href="styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body class="text-center">
